# slice

./: .gitignore  Cargo.toml  README.md  examples.md
field_spec/: Cargo.toml
field_spec/src/: lib.rs
inputs/: comma.sv  dot.sv  inputs.tgz  pipe.txt  space.sv  tab.txt
src/: args.rs  fields.rs  lib.rs  main.rs  split.rs
tests/: crust.rs  slice.rs
