[package]
name = "crust"
version = "0.1.0"
authors = ["Sriharsha Mucheli <harshasrisri@gmail.com>"]
edition = "2018"
description = "This is yet another implementation of the 'cut' *nix utility written in rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.3"
